Add Update RSVP.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,6 +96,14 @@
                 <option value="true">Yes</option>
               </select>
             </div>
+            <div class="mb-3">
+              <label for="rsvpStatus" class="form-label invite-text wedding-font" style="color:#6a5a44;">RSVP Status</label>
+              <select id="rsvpStatus" name="rsvpStatus" class="form-select" required>
+                <option value="">Select</option>
+                <option value="accepted">Accept</option>
+                <option value="declined">Decline</option>
+              </select>
+            </div>
           </div>
           <div class="modal-footer">
             <button type="submit" class="btn w-100 invite-text wedding-font"
