--- a/public/style.css
+++ b/public/style.css
@@ -163,3 +163,9 @@ span.wedding-font.invite-text {
   font-style: italic;
   font-size: 1rem;
 }
+
+/* Enter full name input */
+#fullName,
+#fullName::placeholder {
+  font-family: Arial, Helvetica, sans-serif !important;
+}
