--- a/views/index.ejs
+++ b/views/index.ejs
@@ -66,6 +66,14 @@
             <div id="acceptedList"></div>
           </div>
         </div>
+        <div class="mt-4">
+          <input type="text" id="guestQuestion" class="form-control mb-2" placeholder="Ask about guests..." />
+          <button id="askGuestBtn" class="btn w-100 invite-text wedding-font"
+            style="background-color: #6a5a44; color: #fff; font-style: italic; font-size: 1rem; border: none;">
+            Ask
+          </button>
+          <div id="guestAnswer" class="mt-2"></div>
+        </div>
       </div>
       <div class="floral-border bottom"></div>
     </div>
